add api update market info
